implemented an exercise filter

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_RAPID_API_KEY=ac9e4365acmshddc406014559036p100905jsn0363fb25744a
+REACT_APP_RAPID_API_KEY="ac9e4365acmshddc406014559036p100905jsn0363fb25744a"
